--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="project">
       <h3>Survey Form</h3>
       <p>A simple HTML/CSS survey form project.</p>
-      <a href="surveyy/index.html">View Project</a>
+      <a href="survey/index.html">View Project</a>
     </div>
   </section>
 
