--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header class="fade-in">
     <h1>Hi, I'm John Vincent Illano</h1>
-    <p>1st Year Student at Mapúa Digital College<br>Major in Software Development</p>
+    <p>1st Year Student at Mapúa Digital College<br>IT Major in Software Development</p>
     <button id="darkModeToggle">🌙</button>
   </header>
 
@@ -33,7 +33,7 @@
 
   <section id="about" class="fade-in">
     <h2>About Me</h2>
-    <p>I'm a first-year student at Mapúa Digital College, majoring in Software Development. I’m learning web technologies like HTML, CSS, and JavaScript, and building projects to improve my skills.</p>
+    <p>I'm a first-year student at Mapúa Digital College,IT majoring in Software Development. I’m learning web technologies like HTML, CSS, and JavaScript, and building projects to improve my skills.</p>
   </section>
 
   <section id="contact" class="fade-in">
